--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,5 @@
 FROM node:22
 WORKDIR /app
 COPY . .
-RUN npm install
 # RUN npm run build # For production
-ENTRYPOINT [ "npm", "run", "dev" ]
+ENTRYPOINT [ "npm", "run", "preview" ]
