--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
-FROM python:3.10-alpine
+FROM python:3.10-bullseye
 WORKDIR /app
 COPY . .
+RUN apt-get update && apt-get install -y g++
 RUN pip install -r requirements.txt
 EXPOSE 8000
 ENTRYPOINT [ "python", "manage.py", "runserver"]
